Temporary fix to stop footer and sidebar overlap

--- a/source/assets/stylesheets/_sidebar.scss
+++ b/source/assets/stylesheets/_sidebar.scss
@@ -18,3 +18,9 @@
   @include button;
   @include radius;
 }
+
+// Ensures the footer does not overlap with the sidebar as the HTML elements are
+// loaded and populated.
+body > section {
+  min-height: 550px;
+}
